--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <ul>
               <li><a href="#home">Home</a></li>
                <li><a href="#about">About</a></li>
-               <li><a href="#skills">Skills</a></li>
-               <li><a href="#services">Services</a></li>
+               <li><a href="#skills">Gallery</a></li>
+               <li><a href="#services">Certificates</a></li>
                <li><a href="#portfolio">Portfolio</a></li>
             </ul>
           </nav>
@@ -31,7 +31,6 @@
               more personalized and impactful digital experience.
             </p>
             <div class="buttons">
-              <a href="#" class="hire-btn">Hire me</a>
               <a href="#" class="contact-btn">Contact me</a>
             </div>
             <div class="socials">
