--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <div class="hero-content">
             <h1>Hello, I'm <span>Paark Hemram</span></h1>
             <h2>And I'm a <span class="role">CS Student</span></h2>
-            <p>Doing Bsc.CSIT in Mechi Multipel Campus, Bhadrapur.
+            <p>Doing Bsc.CSIT in Mechi Multiple Campus, Bhadrapur.
               I am deeply passionate about computers, dedicating my time to coding and web design. 
               My goal is to master every aspect of computing and harness these skills to create a 
               more personalized and impactful digital experience.
