--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
               My goal is to master every aspect of computing and harness these skills to create a 
               more personalized and impactful digital experience.
             </p>
+            <p>Website will be ready soon.</p>
             <div class="buttons">
               <a href="#" class="contact-btn">Contact me</a>
             </div>
