--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <title>Portfolio</title>
         <link rel="stylesheet" href="style.css">
@@ -14,7 +14,7 @@
             <ul>
               <li><a href="#home">Home</a></li>
                <li><a href="#about">About</a></li>
-               <li><a href="#skills">Gallery</a></li>
+               <li><a href="index2.html">Gallery</a></li>
                <li><a href="#services">Certificates</a></li>
                <li><a href="#portfolio">Portfolio</a></li>
             </ul>
@@ -25,11 +25,10 @@
           <div class="hero-content">
             <h1>Hello, I'm <span>Paark Hemram</span></h1>
             <h2>And I'm a <span class="role">CS Student</span></h2>
-            <p>Doing Bsc.CSIT in Mechi Multiple Campus, Bhadrapur.
+            <p>Doing Bsc.CSIT in Mechi Multipel Campus, Bhadrapur.
               I am deeply passionate about computers, dedicating my time to coding and web design. 
               My goal is to master every aspect of computing and harness these skills to create a 
               more personalized and impactful digital experience.
-              I am developing soon. 
             </p>
             <div class="buttons">
               <a href="#" class="contact-btn">Contact me</a>
