--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 
         <title>Portfolio</title>
         <link rel="stylesheet" href="style.css">
+        <head>
+          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+      </head>
+      
         </head>
       <div class="container">
         <header>
@@ -25,19 +29,29 @@
           <div class="hero-content">
             <h1>Hello, I'm <span>Paark Hemram</span></h1>
             <h2>And I'm a <span class="role">CS Student</span></h2>
-            <p>Doing Bsc.CSIT in Mechi Multiple Campus, Bhadrapur.
-              I am deeply passionate about computers, dedicating my time to coding and web design. 
-              My goal is to master every aspect of computing and harness these skills to create a 
-              more personalized and impactful digital experience.
-            </p>
+            <p>I am pursuing a Bachelor's degree in Computer Science and Information Technology,
+               where I focus extensively on coding and web design. I am dedicated to continuously
+              improving my skills in the IT field. My ambition is to become a successful computer operator, 
+              leveraging my expertise to contribute to technological advancements and solve real-world challenges.
+              </p>
+
             <div class="buttons">
               <a href="#" class="contact-btn">Contact me</a>
             </div>
             <div class="socials">
-    <a href="#"><i class="fab fa-facebook-f"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-linkedin-in"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
+              <div class="social-media-icons">
+                <a href="https://www.facebook.com/profile.php?id=100072665987773" target="_blank" class="social-icon">
+                    <i class="fab fa-facebook"></i>
+                </a>
+                </a>
+                <a href="https://www.instagram.com/ohh.itz_mdl/" target="_blank" class="social-icon">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/paark-hemram-b881b6343" target="_blank" class="social-icon">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+            </div>
+            
 </div>
           </div>
           <div class="profile-pic">
