--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               </p>
 
             <div class="buttons">
-              <a href="#" class="contact-btn">Contact me</a>
+              <a href="index3.html" class="contact-btn">Contact me</a>
             </div>
             <div class="socials">
               <div class="social-media-icons">
