--- a/index3.html
+++ b/index3.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style3.css" />
-    <title>Browser</title>
+    <title>Contact Me</title>
 </head>
 
 <body>
     
     <div class="form">
-        <h2>Form Here</h2>
+        <h2>Form Here Fill It</h2>
         <form action="https://api.web3forms.com/submit" method="POST" class="contact-left">
 
             <input type="hidden" name="access_key" value="a2d1c884-bf72-4829-a718-54e185162b7e">
